<resources>
    <string name="app_name">TacTalk</string>
    <string name="welcome">Welcome to TacTalk</string>

    <string-array name="game_type">
        <item>Please Select A Game Type</item>
        <item>Championship</item>
        <item>Friendly</item>
        <item>Europe Cup</item>
        <item>Others</item>
    </string-array>

    <string-array name="team_colour">
        <item>Please Select A Team Colour</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <string-array name="opp_colour">
        <item>Please Select A Opposition Colour</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <string-array name="chose_public">
        <item>Please Chosen Public or Not</item>
        <item>Yes</item>
        <item>Not</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NextHalf">NextHalf</string>
    <string name="HalfTime">Next Half</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="match_start">Start Recording!</string>
    <string name="startTime">0:00</string>
    <string name="GameOver">GameOver</string>
    <string name="HomeButton">Home</string>
    <string name="StatsButton">Stats</string>
    <string name="BackButton">Back</string>
    <string name="FirstHalf">1st Half</string>
    <string name="TeamA">DUBLIN 0 – 00</string>
    <string name="TeamB">KERRY 0 – 00</string>
    <string name="EndHalf">End Half</string>

    <!-- Strings related to login -->
    <string name="modifiedEditText">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="password_require">Password must contain: At least 8 characters, 1 uppercase letter, 1 number and 1 special character (!,$,@ etc.)</string>
    <string name="project_name">TacTalk</string>
    <string name="manage_team">Manage Team</string>
    <string name="set_up_matchs">Set up match</string>
    <string name="logo_img">logo</string>
    <string name="register_name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register_button">Register</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="new_user">New user? Register Now</string>
    <string name="team_player">Player</string>
    <string name="team_number">Number</string>
    <string name="bio">Ryan Smith        1
    \n\nJohn Doe        2
    \nPaddy Brady        3</string>
    <string name="done_button">Done</string>
    <string name="match_date">dd/mm/yy</string>
    <string name="match_opposition">Opposition</string>
    <string name="match_location">Location</string>
    <string name="Set_Up_Match">SETUP MATCH</string>
    <string name="ManageTeam">MANAGE TEAM</string>
    <string name="Record">Record</string>
    <string name="Match_Over">MATCH OVER</string>

    <string name="working">Working</string>
    <string name="stopped">Stopped</string>
    <string name="set_up_match">Set Up Match</string>
    <string name="TeamAwinning">Team A Winning</string>

</resources>