<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202C74"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginTop="288dp"
        android:text="@string/TeamB"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Stats"
        android:layout_width="114dp"
        android:layout_height="64dp"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="52dp"
        android:text="@string/EndHalf"
        android:textColor="#FFFFFF"
        app:backgroundTint="#000200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/Stop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/Stop"
        android:layout_width="114dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:text="@string/Pause"
        app:backgroundTint="#FF0505"
        app:layout_constraintBaseline_toBaselineOf="@+id/Stats"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="254dp"
        android:layout_height="94dp"
        android:layout_marginTop="44dp"
        android:background="#202C74"
        android:gravity="center_horizontal"
        android:text="@string/startTime"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firsthalf"
        android:layout_width="143dp"
        android:layout_height="42dp"
        android:gravity="center_horizontal"
        android:text="@string/FirstHalf"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/TeamA"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="222dp"
        android:layout_height="107dp"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="172dp"
        android:text="@string/Record"
        app:backgroundTint="#2AC87B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
